实现 M01-05 资源临时授权
